fix(css): fixes padding on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -139,7 +139,9 @@ body {
   min-height: 100%;
   display: grid;
   grid-template-rows: auto 1fr auto;
-  grid-template-columns: minmax(auto, var(--container-width));
+  grid-template-columns: minmax(0, var(--container-width));
+  overflow-wrap: break-word;
+  word-break: break-word;
   justify-content: center;
   padding: var(--spacing-lg);
   gap: var(--spacing-lg);
@@ -671,11 +673,19 @@ details[open] > .toc-title::before {
 
 @media (max-width: 600px) {
   body {
-    padding-top: 2em;
+    padding: 2em 1em;
   }
 
   pre {
-    max-width: calc(100vw - 4em);
+    max-width: calc(100vw - 2em);
+  }
+
+  .toc-content {
+    padding: var(--spacing-sm);
+  }
+
+  .toc-content ol {
+    margin-left: 1rem;
   }
 }
 
